small_fixes + homepage
